--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>    
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://listblog.github.io/freedownloadapps.Learn-Ethical-Hacking-HackerX-vhackerx_1.3.8-Pro-Repackmaster-/">https://listblog.github.io/freedownloadapps.Learn-Ethical-Hacking-HackerX-vhackerx_1.3.8-Pro-Repackmaster-/</a><br>    
+                <a target="_bLank" href="https://freedownloadapps.s3.us-east-005.backblazeb2.com/Learn+Ethical+Hacking:+HackerX+vhackerx_1.3.8+%5BPro%5D%5BRepackmaster%5D/index.html">https://freedownloadapps.s3.us-east-005.backblazeb2.com/Learn+Ethical+Hacking:+HackerX+vhackerx_1.3.8+%5BPro%5D%5BRepackmaster%5D/index.html</a><br>
+                <a target="_bLank" href="https://freedownloadapps-learn-ethi-git-71b46a-birchs-projects-9248c938.vercel.app/">https://freedownloadapps-learn-ethi-git-71b46a-birchs-projects-9248c938.vercel.app/</a><br>
+                <a target="_bLank" href="https://fancy-tartufo-e2894f.netlify.app/">https://fancy-tartufo-e2894f.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
